# FreeRDP

client/Windows/: CMakeLists.txt  wf_client.c  wf_client.h  wf_event.c
client/Windows/activex/: .gitignore  CMakeLists.txt  FreeRdpActivex.cpp  FreeRdpActivex.def  FreeRdpActivex.h  FreeRdpActivex.rc  FreeRdpActivexCtrl.cpp  FreeRdpActivexCtrl.h  FreeRdpAx.cpp  FreeRdpAx.def  FreeRdpAx.idl  FreeRdpAx.rc  FreeRdpCtrl.cpp  FreeRdpCtrl.h  FreeRdpCtrl.rgs  FreeRdpInterfaces.h  FreeRdpInterfaces.idl  FullScreen.cpp  IMsRdpClient.cpp  IMsRdpClientAdvancedSettings.cpp  IMsRdpClientNonScriptable.cpp  IMsRdpClientSecuredSettings.cpp  IMsRdpClientShell.cpp  IMsRdpClientTransportSettings.cpp  IMsRdpDevice.cpp  IMsRdpDevice.h  IMsRdpDeviceCollection.cpp  IMsRdpDrive.cpp  IMsRdpDriveCollection.cpp  IMsRdpPreferredRedirectionInfo.cpp  IMsTscAxEvents.cpp  IMsTscAxEvents_CP.H  IMsTscDebug.cpp  ITsRemoteProgram.cpp  VirtualChannels.cpp  _IFreeRdpCtrlEvents_CP.h  dllmain.cpp  dllmain.h  resource.h  stdafx.h  (+1 more)
client/common/: cmdline.c
include/freerdp/: event.h  freerdp.h  settings.h
libfreerdp/core/: freerdp.c
